# XML-Editor

./: .gitignore  2_0.py  6.xml  7.xml  Geomentry.py  LICENSE  README.md  Raycaster.py  guide.md  pyproject.toml  requirements.txt  操作指南.md
main/: 1.xml  Controlpanel.py  Geomentry.py  HierarchyTree.py  Main.py  OpenGLWidget.py  Openglwidget.py  PropertyPanel.py  Xmlparser.py
main/saved_states/: saved_states.json
origin/: 1.xml  2_0.py  Raycaster.py  test.xml
save/: 20250427_225843.json  20250427_231316.json
save/history/: history_20250428_173347.json  history_20250428_173406.json  history_20250428_173410.json  history_20250428_173417.json  history_20250428_173439.json  history_20250428_173440.json  history_20250428_173443.json  history_20250428_173650.json  history_20250428_173651.json  history_20250428_173652.json  history_20250428_173654.json  history_20250428_173701.json  history_20250428_173704.json  history_20250428_173803.json  history_20250428_173806.json  history_20250428_173818.json  history_20250428_173820.json  history_20250428_173947.json  history_20250428_174005.json  history_20250428_174006.json  history_20250428_174122.json  history_20250428_174125.json  history_20250428_174139.json  history_20250428_174141.json
xml_editor/: __init__.py  main.py  requirements.txt
xml_editor/model/: __init__.py  geometry.py  raycaster.py  xml_parser.py
xml_editor/view/: __init__.py  control_panel.py  hierarchy_panel.py  hierarchy_tree.py  opengl_view.py  property_panel.py  property_view.py
xml_editor/viewmodel/: __init__.py  control_viewmodel.py  (+3 more)
