[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-editor"
version = "0.1.0"
description = "MuJoCo场景编辑器"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["PyQt5", "MuJoCo", "3D", "Editor"]
authors = [
    {name = "Authors"}
]
dependencies = [
    "PyQt5>=5.15.0",
    "numpy>=1.20.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "vulture>=2.7.0",
]

[tool.setuptools]
packages = ["xml_editor"] 